--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -77,7 +77,7 @@
                 	
                 	<div class="col-lg-12">
 						<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-							<form class="form-inline">
+							<form class="form-inline" ng-submit="search()">
 							  <div class="form-group">
 							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name">
 							  </div> 
@@ -123,7 +123,7 @@
 							   </div> 
 							   
 							   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
-							   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
+							   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 							</form>
 						</div>
 					</div>
