--- a/backend/src/main/webapp/app/views/member_type/search.html
+++ b/backend/src/main/webapp/app/views/member_type/search.html
@@ -1,7 +1,7 @@
 
 <div class="col-lg-12">
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
-		<form class="form-inline">
+		<form class="form-inline" ng-submit="search()">
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="ประเภทสมาชิก" ng-model="$parent.formData.memberTypeName">
 		  </div>
@@ -28,7 +28,7 @@
                 </label>
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
-		   <button type="button" class="btn btn-outline btn-primary" ng-click="search()">ค้นหา</button>
+		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
 		</form>
 	</div>
 </div>
