--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -61,7 +61,7 @@
 					<th>{{'user.table.header.role' | translate}}</th>
 					<th>{{'user.table.header.status' | translate}}</th>
 					<th>{{'user.table.header.created_date' | translate}}</th>
-					<th></th>
+					<th>กระทำ</th>
 				</tr>
 			</thead>
 			<tbody>
