--- a/backend/src/main/webapp/app/views/finger_print_report/main.html
+++ b/backend/src/main/webapp/app/views/finger_print_report/main.html
@@ -82,7 +82,19 @@
 							    <input type="text" class="form-control" placeholder="ชื่อ" ng-model="formData.name">
 							  </div> 
 							  
-							  <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+							  <div class="form-group">
+					                <label class="control-label">วันที่จาก</label>
+					                <div class="input-group" style="width: 140px;">
+										<input type="text" class="form-control" data-provide="datepicker" date-parser="dd/MM/yyyy"
+											   data-date-format="dd/mm/yyyy"
+											   data-date-autoclose="true"
+											   data-date-today-btn="true"
+											   data-date-today-highlight="true"
+											   data-date-language="th-en" ng-model="formData.startDate">
+					                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+					                </div>
+							  </div>
+							  <!-- <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 								<label class="control-label">วันที่จาก</label>
 								<div class="input-group" style="width: 140px;">
 									<input name="startDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
@@ -96,8 +108,22 @@
 										</button>
 									</span>
 								</div>
-							   </div>
-							   <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
+							   </div> -->
+							   
+							   
+							    <div class="form-group">
+					                <label class="control-label">ถึง</label>
+					                <div class="input-group" style="width: 140px;">
+										<input type="text" class="form-control" data-provide="datepicker" date-parser="dd/MM/yyyy"
+											   data-date-format="dd/mm/yyyy"
+											   data-date-autoclose="true"
+											   data-date-today-btn="true"
+											   data-date-today-highlight="true"
+											   data-date-language="th-en" ng-model="formData.endDate">
+					                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+					                </div>
+							  </div>
+							   <!-- <div class="form-group" ng-class="{'has-error':persistForm.birthday.$invalid}">
 									<label class="control-label">ถึง</label>
 									<div class="input-group" style="width: 140px;">
 										<input name="endDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
@@ -111,7 +137,7 @@
 											</button>
 										</span>
 									</div>
-							   </div>
+							   </div> -->
 							   
 							   <div class="form-group">
 							   		<label class="control-label">เวลาจาก</label>
