--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -27,7 +27,7 @@
 					<input tabindex="3" name="lastname" class="form-control" ng-model="data.lastname" required>
 				</div>
 				
-				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.lastnameEng.$invalid}">
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.firstnameEng.$invalid}">
 					<label class="control-label">ชื่อภาษาอังกฤษ</label>
 					<input tabindex="4" name="firstnameEng" class="form-control" ng-model="data.firstnameEng" required>
 				</div>
