--- a/backend/src/main/webapp/app/views/renewal/main.html
+++ b/backend/src/main/webapp/app/views/renewal/main.html
@@ -79,8 +79,8 @@
 									<td>{{ data.expireDate | date:'dd/MM/yyyy' }}</td>
 									<td>{{ data.period == '0 วัน' ? 'วันนี้' : data.period }}</td>
 									<td>
-										<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.status == 0 && data.enabled == 1"></i>
-										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.status == 0 && data.enabled == 0"></i>
+										<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.enabled == 1"></i>
+										<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
 										<i class="fa fa-lock fa-lg" ng-show="data.status == 1"></i>
 									</td>
 									<td>
@@ -144,7 +144,18 @@
 							<span class="form-control" readonly>{{ popup.period == '0 วัน' ? 'วันนี้' : popup.period }}</span>
 					    </div>
 				  	</div>
-					<div class="form-group">
+				  	
+				  	<div class="form-group" ng-class="{'has-error':persistForm.expireDate.$invalid}">
+		                <label class="col-lg-5 control-label">วันหมดอายุรอบถัดไป</label>
+		                <div class="col-lg-5">
+			                <div class="input-group">
+								<input type="text" name="expireDate" class="form-control datepicker" 
+									   date-parser="dd/MM/yyyy" ng-model="data.expireDate" required>
+			                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+			                </div>
+		                </div>
+					</div>
+					<!-- <div class="form-group">
 					    <label class="col-lg-5 control-label">วันหมดอายุรอบถัดไป</label>
 					    <div class="col-lg-5">
 							<code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
@@ -161,7 +172,7 @@
 								</span>
 							</div>
 					    </div>
-				  	</div>
+				  	</div> -->
 				  	<!-- <div class="form-group">
 					    <label class="col-lg-5 control-label">ราคาค่าสมัครสมาชิก</label>
 					  	<div class="col-lg-5">
