--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -97,11 +97,8 @@
 			            <i class="fa fa-lock fa-2x" style="color: #337AB7;"></i>
 			        </div>
 				</div>
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid}">
+				<!-- <div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid}">
 					<label class="control-label">Username</label>
-					<!-- <span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-						<i class='fa fa-warning fa-fw'></i><small><em>{{ existingUserErrMsg }}</em></small>
-					</span> -->
 					<input tabindex="18" name="userName" class="form-control" ng-model="data.authen.userName" required>
 				</div>
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.password.$invalid}">
@@ -111,7 +108,7 @@
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.rePassword.$invalid}">
 					<label class="control-label">Re-Password</label>
 					<input tabindex="20" name="rePassword" type="password" class="form-control" ng-model="rePassword" ng-required="isPassRequired">
-				</div>
+				</div> -->
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeId.$invalid}">
 					<label class="control-label">ประเภทสมาชิก</label>
 					<select tabindex="21" name="memberTypeId" class="form-control" ng-model="data.memberTypeId" ng-change="selectedMemType()" required>
