--- a/backend/src/main/webapp/app/views/report/money.html
+++ b/backend/src/main/webapp/app/views/report/money.html
@@ -1,29 +1,36 @@
 <div class="col-lg-12">
 	<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
 		<form class="form-inline">
+		
+		
+			<div class="form-group">
+				<label class="control-label">วันที่</label>
+				<div class="input-group">
+					<input tabindex="8" name="birthday" type="text" class="form-control" datepicker-popup="{{format}}"
+						current-text="{{'datepicker.today' | translate}}"
+						clear-text="{{'datepicker.clear' | translate}}"
+						close-text="{{'datepicker.close' | translate}}"
+						ng-model="data.birthday" is-open="birthdayPicker" /> 
+						<span class="input-group-btn">
+						<button type="button" class="btn btn-default" ng-click="openBirthday($event)">
+							<i class="glyphicon glyphicon-calendar"></i>
+						</button>
+					</span>
+				</div>
+			</div>
+		
+		
+		
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_show_hint' | translate}}" ng-model="$parent.formData.userNameShow" ng-keyup="search()">
 		  </div>
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="{{'user.search.username_hint' | translate}}" ng-model="$parent.formData.userName" ng-keyup="search()">
 		  </div>
-		  <div class="form-group">
-			<select name="roles" class="form-control" ng-model="$parent.formData.role" ng-change="search()">
-				<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			    <option ng-selected="{{ $parent.formData.role == option.authority }}"
-			    		ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-			</select>
-		  </div>
-		  <div class="form-group">
-                <label style="margin-left: 20px;">{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-                <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="1" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.enable' | translate}}
-                </label>
-                <label class="radio-inline">
-                    <input type="radio" name="userStatus" value="0" ng-model="$parent.formData.status" ng-change="search()">{{'user.addpage.status.disable' | translate}}
-                </label>
-		   </div>
+		  
+		  
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'user.search.clear_btn' | translate}}</button>
+		   
 		</form>
 	</div>
 </div>
