--- a/backend/src/main/webapp/app/views/report/main.html
+++ b/backend/src/main/webapp/app/views/report/main.html
@@ -9,8 +9,8 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-lightbulb-o fa-fw"></i> แสดงรายงาน
-                    <button ng-show="formData.isDetailMode" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
+                    <i class="fa fa-area-chart fa-fw"></i> {{ title }}
+                    <button ng-show="isMenu" type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
                 </div>
