--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -4,7 +4,19 @@
 		<form class="form-inline" ng-submit="search()">
 		  <div class="form-group">
 		    <input type="text" class="form-control" placeholder="ชื่อผู้ลงทะเบียน" ng-model="$parent.formData.firstname">
+		    <input type="text" class="form-control" placeholder="เลขที่สมาชิก" ng-model="$parent.formData.memberId">
 		  </div> 
+		  <div class="form-group">
+               <div class="input-group" style="width: 140px;">
+				<input type="text" class="form-control" data-provide="datepicker" date-parser="dd/MM/yyyy" placeholder="วันหมดอายุ"
+					   data-date-format="dd/mm/yyyy"
+					   data-date-autoclose="true"
+					   data-date-today-btn="true"
+					   data-date-today-highlight="true"
+					   data-date-language="th-en" ng-model="$parent.formData.expireDate">
+                   <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+               </div>
+			  </div>
 		  <div class="form-group">
                 <label style="margin-left: 20px;">สถานะ &nbsp;&nbsp;</label>
                 <label class="radio-inline">
@@ -45,17 +57,21 @@
 			<thead>
 				<tr>
 					<th style="width: 10%;">ลำดับที่</th>
-					<th style="width: 30%;">ชื่อ</th>
-					<th style="width: 20%;">ประเภทสมาชิก</th>
-					<th style="width: 20%;">สถานะ</th>
-					<th style="width: 20%;">กระทำ</th>
+					<th style="width: 20%;">ชื่อ</th>
+					<th style="width: 15%;">เลขที่สมาชิก</th>
+					<th style="width: 15%;">ประเภทสมาชิก</th>
+					<th style="width: 20%;">วันหมดอายุ</th>
+					<th style="width: 10%;">สถานะ</th>
+					<th style="width: 10%;">กระทำ</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr ng-repeat="data in datas track by $index">
 					<td>{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 					<td>{{ data.firstname }} {{ data.lastname }}</td>
+					<td>{{ data.memberId }}</td>
 					<td>{{ data.memberTypeName }}</td>
+					<td>{{ data.expireDate | date: 'dd/MM/yyyy' }}</td>
 					<td>
 						<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="data.enabled == 1"></i>
 						<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-show="data.enabled == 0"></i>
