--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -269,10 +269,29 @@
 					<label class="control-label">Facebook</label>
 					<input tabindex="16" name="conFacebook" class="form-control" ng-model="data.conFacebook">
 				</div>
-				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.conAddress.$invalid}">
+				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.conAddress.$invalid}">
 					<label class="control-label">ที่อยู่</label>
 					<textarea tabindex="17" name="conAddress" class="form-control" rows="3" ng-model="data.conAddress" required></textarea>
 				</div>
+				
+				<div class="form-group col-lg-2">
+					<label class="control-label">รหัสไปรษณี</label>
+					<input tabindex="17" name="conTelNo" class="form-control" ng-model="data.zipcode" ng-change="zipCodeChanged()">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">แขวง/ตำบล</label>
+					<input tabindex="17" name="conTelNo" class="form-control" ng-model="data.district">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">เขต/อำเภอ</label>
+					<span tabindex="10" name="conTelNo" class="form-control" ng-model="data.amphure"></span>
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">จังหวัด</label>
+					<span tabindex="10" name="conTelNo" class="form-control" ng-model="data.provice"></span>
+				</div>
+				
+				
 			</div>
 		</div>
 		
