--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -274,21 +274,24 @@
 					<textarea tabindex="17" name="conAddress" class="form-control" rows="3" ng-model="data.conAddress" required></textarea>
 				</div>
 				
-				<div class="form-group col-lg-2">
+				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.zipcode.$invalid}">
 					<label class="control-label">รหัสไปรษณี</label>
-					<input tabindex="17" name="conTelNo" class="form-control" ng-model="data.zipcode" ng-change="zipCodeChanged()">
+					<input tabindex="17" name="zipcode" class="form-control" ng-model="data.zipcode" ng-change="zipCodeChanged()" required>
 				</div>
-				<div class="form-group col-lg-2">
+				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.district.$invalid}">
 					<label class="control-label">แขวง/ตำบล</label>
-					<input tabindex="17" name="conTelNo" class="form-control" ng-model="data.district">
-				</div>
+					<select tabindex="17" name="district" class="form-control" ng-model="data.district" ng-change="selectedDistrict()"
+						    ng-options="option.districts.districtId as option.districts.districtName for option in districts" required>
+						<option value="">-- กรุณาเลือก --</option>
+				    </select>
+			  	</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">เขต/อำเภอ</label>
-					<span tabindex="10" name="conTelNo" class="form-control" ng-model="data.amphure"></span>
+					<span tabindex="10" name="amphur" class="form-control" ng-model="data.amphure"></span>
 				</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">จังหวัด</label>
-					<span tabindex="10" name="conTelNo" class="form-control" ng-model="data.provice"></span>
+					<span tabindex="10" name="province" class="form-control" ng-model="data.provice"></span>
 				</div>
 				
 				
