--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -281,19 +281,18 @@
 				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.district.$invalid}">
 					<label class="control-label">แขวง/ตำบล</label>
 					<select tabindex="17" name="district" class="form-control" ng-model="data.district" ng-change="selectedDistrict()"
-						    ng-options="option.districts.districtId as option.districts.districtName for option in districts" required>
+						    ng-options="option.district.districtId as option.district.districtName for option in zipcodes" required>
 						<option value="">-- กรุณาเลือก --</option>
 				    </select>
 			  	</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">เขต/อำเภอ</label>
-					<span tabindex="10" name="amphur" class="form-control" ng-model="data.amphure"></span>
+					<span class="form-control">{{ data.amphur }}</span>
 				</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">จังหวัด</label>
-					<span tabindex="10" name="province" class="form-control" ng-model="data.provice"></span>
+					<span class="form-control">{{ data.province }}</span>
 				</div>
-				
 				
 			</div>
 		</div>
