--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -275,23 +275,24 @@
 				</div>
 				
 				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.zipcode.$invalid}">
-					<label class="control-label">รหัสไปรษณี</label>
-					<input tabindex="17" name="zipcode" class="form-control" ng-model="data.zipcode" ng-change="zipCodeChanged()" required>
+					<label class="control-label">รหัสไปรษณีย์</label>
+					<input tabindex="17" name="zipcode" ng-minlength="5" maxlength="5" class="form-control" ng-model="zipcode" ng-change="zipCodeChanged()" required>
 				</div>
 				<div class="form-group col-lg-2" ng-class="{'has-error':persistForm.district.$invalid}">
 					<label class="control-label">แขวง/ตำบล</label>
-					<select tabindex="17" name="district" class="form-control" ng-model="data.district" ng-change="selectedDistrict()"
-						    ng-options="option.district.districtId as option.district.districtName for option in zipcodes" required>
+					<select tabindex="17" name="district" class="form-control" ng-hide="districtName" ng-model="data.addressId" ng-change="selectedDistrict()"
+						    ng-options="option.id as option.district.districtName for option in zipcodes | orderBy: 'district.districtName'" ng-required="!districtName">
 						<option value="">-- กรุณาเลือก --</option>
 				    </select>
+				    <span class="form-control" ng-show="districtName">{{ districtName }}</span>
 			  	</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">เขต/อำเภอ</label>
-					<span class="form-control">{{ data.amphur }}</span>
+					<span class="form-control">{{ amphur }}</span>
 				</div>
 				<div class="form-group col-lg-2">
 					<label class="control-label">จังหวัด</label>
-					<span class="form-control">{{ data.province }}</span>
+					<span class="form-control">{{ province }}</span>
 				</div>
 				
 			</div>
