--- a/backend/src/main/webapp/app/views/register/search.html
+++ b/backend/src/main/webapp/app/views/register/search.html
@@ -28,6 +28,7 @@
 		   </div>
 		   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">ล้าง</button>
 		   <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
+		   <!-- <button type="button" class="btn btn-outline btn-warning pull-right" ng-click="exportRegistered()">Export</button> -->
 		</form>
 	</div>
 </div>
