--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -158,7 +158,7 @@
 				</div> -->
 				
 				
-				<!-- <div class="form-group col-lg-6" ng-class="{'has-error':persistForm.expireDate.$invalid}">
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.expireDate.$invalid}">
 	                <label class="control-label">วันหมดอายุ</label>
 	                <code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
 	                <div class="input-group">
@@ -170,7 +170,7 @@
 							   data-date-language="th-en" ng-model="data.expireDate" required>
 	                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 	                </div>
-				</div> -->
+				</div>
 				<!-- <div class="form-group col-lg-6" ng-class="{'has-error':persistForm.expireDate.$invalid}">
 					<label class="control-label">วันหมดอายุ</label>
 					<code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
@@ -189,10 +189,10 @@
 				</div> -->
 				
 				
-				<div class="form-group col-lg-6">
+				<!-- <div class="form-group col-lg-6">
 					<label class="control-label">วันหมดอายุ</label>
 					<span class="form-control">{{ data.expireDate | date: format }}</span>
-				</div>
+				</div> -->
 				
 				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.price.$invalid}">
 	                <label class="control-label">ราคาค่าสมัครสมาชิก</label>
