--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -55,7 +55,7 @@
 							   data-date-autoclose="true"
 							   data-date-today-btn="true"
 							   data-date-today-highlight="true"
-							   data-date-language="th-th" ng-model="data.birthday">
+							   data-date-language="th-th" ng-model="birthday">
 	                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 	                </div>
 				</div>
