--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -302,7 +302,7 @@
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">ล้าง</button>
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="persistForm.$invalid" tabindex="26">{{ persisBtn }}</button>
 			<button type="button" class="btn btn-outline btn-success btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="print()">พิมพ์ใบเสร็จ</button>
-			<!-- <button type="button" class="btn btn-outline btn-success btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="printRegisterForm()">Register Form</button> -->
+			<button type="button" class="btn btn-outline btn-success btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="printRegisterForm()">Register Form</button>
 		</div>
 	
 	</form>
