--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -302,7 +302,7 @@
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">ล้าง</button>
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="persistForm.$invalid" tabindex="26">{{ persisBtn }}</button>
 			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="print(1)">พิมพ์ใบเสร็จ</button>
-			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="print(2)">Register Form</button>
+			<button type="button" class="btn btn-outline btn-warning btn-lg" ng-disabled="persistForm.$invalid" tabindex="27" ng-click="print(2)">Registration Form</button>
 		</div>
 	
 	</form>
