--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,27 +1,27 @@
 <div>
 	<div class="col-lg-6">
 		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="form-inline" ng-hide="isEdit">
+			<!-- <div class="form-inline" ng-hide="isEdit">
 				<label>{{'user.addpage.auto_gen' | translate}}</label>
 				<input type="checkbox" value="" ng-model="autoGen" ng-change="autoGenEvent()">
-			</div>
+			</div> -->
 			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
 				<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
 				</span>
-				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
+				<input name="userNameShow" class="form-control" ng-model="user.showname" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
 				<label class="control-label">{{'user.addpage.username' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
 					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
 				</span>
-				<input name="userName" class="form-control" ng-model="user.userName" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
+				<input name="userName" class="form-control" ng-model="user.username" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
 			</div>
 			<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
 				<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-				<input name="password" class="form-control" type="password" ng-model="user.password" ng-disabled="isEdit || autoGen" ng-required="!isEdit">
+				<input name="password" class="form-control" type="password" ng-model="user.password" ng-required="!isEdit">
 				<p class="help-block" ng-show="autoGen">{{'user.addpage.generated_password_msg' | translate}} {{ user.password }}</p>
 			</div>
 			<div class="form-group" ng-show="!autoGen" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
@@ -30,23 +30,23 @@
 					<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
 				</span>
 				<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-				ng-change="notMatchRepassErrMsg = null" ng-disabled="isEdit" ng-required="!isEdit && !autoGen">
+				ng-change="notMatchRepassErrMsg = null" ng-required="!isEdit">
 			</div>
 			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
 				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
+				<select name="roles" class="form-control" ng-model="user.authorities[0].authority" required>
 					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+			      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
 			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
 			    </select>
 			</div>
 			<div class="form-group">
                  <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="1" ng-checked="user.enabled == 1" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
+                     <input type="radio" name="userStatus" value="true" ng-checked="user.enabled == true" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
                  </label>
                  <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="0" ng-checked="user.enabled == 0" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
+                     <input type="radio" name="userStatus" value="false" ng-checked="user.enabled == false" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
                  </label>
              </div>
 			<div style="text-align: center;">
